# browser_stream

./: .gitignore  .pre-commit-config.yaml  LICENSE  main.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: test.yml
browser_stream/: __init__.py  cli.py  config.py  echo.py  helpers.py  utils.py
tests/: conftest.py  test_cli.py  test_cli_smoke.py  test_config.py  test_core_functionality.py  test_helpers.py  test_utils.py
